--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -18,33 +18,37 @@
                 </form>
             </div>
         </div>
-        <form class="mb-3 validated-form" action="/campgrounds/<%= campground._id %>/reviews?_method=POST" method="POST" novalidate>
-            <h2>Leave a review</h2>
-            <div class="mb-3">
-                <label class="form-label" for="rating">Range</label>
-                <input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5" />
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="body">Review</label>
-                <textarea required class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
-                <div class="valid-feedback">Looks good!</div>
-            </div>
-            <button class="btn btn-success">Submit</button>
-        </form>
     </div>
 
     <div class="col-6">
-        <h2 class="mb-3">Lo que opinan los clientes</h2>
-        <% for (let review of campground.reviews) {%>
-        <div class="mb-3 card">
-            <div class="card-body">
-                <h5 class="card-title">Rating: <%= review.rating %></h5>
-                <p class="card-text">Review: <%= review.body %></p>
-                <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-                    <button class="btn btn-danger">DELETE</button>
-                </form>
-            </div>
+        <div class="mb-3">
+            <form class="validated-form" action="/campgrounds/<%= campground._id %>/reviews?_method=POST" method="POST" novalidate>
+                <h2>Leave a review</h2>
+                <div class="mb-3">
+                    <label class="form-label" for="rating">Range</label>
+                    <input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5" />
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="body">Review</label>
+                    <textarea required class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+                    <div class="valid-feedback">Looks good!</div>
+                </div>
+                <button class="btn btn-success">Submit</button>
+            </form>
         </div>
-        <% } %>
+        <div class="mb-3">
+            <h2>Lo que opinan los clientes</h2>
+            <% for (let review of campground.reviews) {%>
+            <div class="mb-3 card">
+                <div class="card-body">
+                    <h5 class="card-title">Rating: <%= review.rating %></h5>
+                    <p class="card-text">Review: <%= review.body %></p>
+                    <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-danger">DELETE</button>
+                    </form>
+                </div>
+            </div>
+            <% } %>
+        </div>
     </div>
 </div>
