--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,14 +9,17 @@
                 <p class="card-text"><%= campground.description %></p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">$ <%= campground.price %> /night</li>
+                <li class="list-group-item">$ <%= campground.price %>/night</li>
+                <li class="list-group-item">Submitted by: <%= campground.author.username %></li>
             </ul>
+            <% if(campground.author.equals(user._id)){ %>
             <div class="card-body">
                 <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                 <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                    <button class="btn btn-danger">DELETE</button>
+                    <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
+            <% } %>
         </div>
     </div>
 
