--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,37 +2,40 @@
 <div class="row">
     <h1 class="text-center">Edit Camp Form</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form">
+        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" name="campground[title]" id="title"
-                    placeholder="Campground title" value="<%= campground.title %>" required>
+                <input class="form-control" type="text" name="campground[title]" id="title" placeholder="Campground title" value="<%= campground.title %>" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" name="campground[location]" id="location"
-                    placeholder="Campground location" value="<%= campground.location %>" required>
+                <input class="form-control" type="text" name="campground[location]" id="location" placeholder="Campground location" value="<%= campground.location %>" required>
             </div class="mb-3">
-            <div class="mb-3">
-                <label class="form-label" for="image">Image</label>
-                <input class="form-control" type="text" name="campground[image]" id="image"
-                    value="<%= campground.image %>" required>
-            </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Price</label>
                 <div class="input-group mb-3">
                     <span class="input-group-text">$</span>
-                    <input type="text" class="form-control" id="price" placeholder="0.00"
-                        value="<%= campground.price %>" name="campground[price]" required>
+                    <input type="text" class="form-control" id="price" placeholder="0.00" value="<%= campground.price %>" name="campground[price]" required>
                     <span class="input-group-text">MXN</span>
                 </div>
             </div>
             <div class="input-group mb-3">
                 <span class="input-group-text">Description</span>
-                <textarea name="campground[description]" id="description" class="form-control"
-                    required><%= campground.description %>"</textarea>
+                <textarea name="campground[description]" id="description" class="form-control" required><%= campground.description %></textarea>
             </div>
-            <button class="btn btn-success mt-3">Update Campground</button>
+            <div class="mb-3">
+                <input class="form-control" type="file" name="campground[image]" id="image" multiple>
+            </div>
+            <div class="mb-3">
+                <% campground.images.forEach((image, index) => { %>
+                <div class="form-check">
+                    <input type="checkbox" name="deleteImages[]" value="<%= image.filename %>" id="image-<%= index %> ">
+                    <label for="image-<%= index %>">Delete?</label>
+                </div>
+                <img src="<%= image.thumbnail %> " alt="" class="img-thumbnail mb-3">
+                <% }) %>
+            </div>
+            <button class=" btn btn-success mt-3">Update Campground</button>
         </form>
         <a class="btn btn-info my-3" href="/campgrounds">All campgrounds</a>
     </div>
