--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
 <div class="row">
     <h1 class="text-center">New Camp Form</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST" novalidate class="validated-form">
+        <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" name="campground[title]" id="title" placeholder="Campground title" required>
@@ -16,10 +16,6 @@
                 <input class="form-control" type="text" name="campground[location]" id="location" placeholder="Campground location" required>
             </div class="mb-3">
             <div class="mb-3">
-                <label class="form-label" for="image">Image</label>
-                <input class="form-control" type="text" name="campground[image]" id="image" required>
-            </div>
-            <div class="mb-3">
                 <label class="form-label" for="price">Price</label>
                 <div class="input-group mb-3">
                     <span class="input-group-text">$</span>
@@ -30,6 +26,9 @@
             <div class="input-group mb-3">
                 <span class="input-group-text">Description</span>
                 <textarea name="campground[description]" id="description" class="form-control" required></textarea>
+            </div>
+            <div class="mb-3">
+                <input class="form-control" type="file" name="campground[image]" id="image" multiple>
             </div>
             <button class="btn btn-success mt-3">Add Campground</button>
         </form>
