--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,31 @@
 <% layout("layouts/boilerplate") %>
+<link rel="stylesheet" href="/stylesheets/stars.css">
 <div class="row">
-    <div class="col-6">
+    <div class="col-6 mb-3">
         <div class="card">
-            <img src="<%= campground.image %>" class="card-img-top" />
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <% if(campground.images){ %>
+                    <% campground.images.forEach((image,i) => { %>
+                    <div class="carousel-item <%= i === 0 ? 'active' : '' %> ">
+                        <img src="<%= image.url %> " class="d-block w-100" alt="...">
+                    </div>
+                    <% }) %>
+                    <% } else{ %>
+                    <img src="https://cdn2.howtostartanllc.com/images/business-ideas/business-idea-images/Campground.jpg" class="d-block w-100" alt="...">
+                    <% } %>
+                </div>
+                <% if(campground.images.length > 1){ %>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                <% } %>
+            </div>
             <div class="card-body">
                 <h5 class="card-title"><%= campground.title %></h5>
                 <h6 class="card-title"><%= campground.location %></h6>
@@ -12,7 +35,7 @@
                 <li class="list-group-item">$ <%= campground.price %>/night</li>
                 <li class="list-group-item">Submitted by: <%= campground.author.username %></li>
             </ul>
-            <% if(campground.author.equals(user._id)){ %>
+            <% if(user && campground.author.equals(user._id)){ %>
             <div class="card-body">
                 <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                 <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
@@ -23,14 +46,26 @@
         </div>
     </div>
 
-    <div class="col-6">
+    <div class="col-6 mb-3">
+        <div id="map"></div>
         <div class="mb-3">
+            <% if(user){ %>
             <form class="validated-form" action="/campgrounds/<%= campground._id %>/reviews?_method=POST" method="POST" novalidate>
                 <h2>Leave a review</h2>
-                <div class="mb-3">
-                    <label class="form-label" for="rating">Range</label>
-                    <input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5" />
-                </div>
+                <fieldset class="starability-basic">
+                    <legend>First rating:</legend>
+                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" aria-label="No rating." />
+                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                    <label for="first-rate1" title="Terrible">1 star</label>
+                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                    <label for="first-rate2" title="Not good">2 stars</label>
+                    <input type="radio" id="first-rate3" name="review[rating]" value="3" checked />
+                    <label for="first-rate3" title="Average">3 stars</label>
+                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                    <label for="first-rate4" title="Very good">4 stars</label>
+                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                    <label for="first-rate5" title="Amazing">5 stars</label>
+                </fieldset>
                 <div class="mb-3">
                     <label class="form-label" for="body">Review</label>
                     <textarea required class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
@@ -38,20 +73,34 @@
                 </div>
                 <button class="btn btn-success">Submit</button>
             </form>
+            <% } %>
         </div>
         <div class="mb-3">
             <h2>Lo que opinan los clientes</h2>
             <% for (let review of campground.reviews) {%>
             <div class="mb-3 card">
                 <div class="card-body">
-                    <h5 class="card-title">Rating: <%= review.rating %></h5>
+                    <h5 class="card-title"><%= review.author.username %>: </h5>
+                    <p class="starability-result" data-rating="<%= review.rating %>"> </p>
                     <p class="card-text">Review: <%= review.body %></p>
+                    <% if(user && review.author.equals(user._id)){ %>
                     <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                         <button class="btn btn-danger">DELETE</button>
                     </form>
+                    <% } %>
                 </div>
             </div>
             <% } %>
         </div>
     </div>
 </div>
+
+<script>
+    // run this to pass from .env to JS file
+    console.log("show.ejs")
+    const MAPBOXTOKEN = "<%- process.env.MAPBOX_TOKEN %>"
+    //convert to JSON
+    const campgroundJSON = <%-JSON.stringify(campground) %>
+</script>
+
+<script src="/scripts/showPageMap.js"></script>
