--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,7 +1,7 @@
 <% if (success && success.length){ %>
 <div class="alert alert-success alert-dismissible fade show" role="alert">
     <strong>Success!</strong> <%= success %>
-    <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close">
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
     </button>
 </div>
 <% } %>
@@ -9,7 +9,7 @@
 <% if (error && error.length){ %>
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
     <p><strong>Error!</strong></p> <%= error %>
-    <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close">
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
     </button>
 </div>
 <% } %>
