--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,23 +1,39 @@
 <% layout("layouts/boilerplate") %>
-<div class="row">
-    <div class="col-6 offset-3">
-        <form action="/register" method="POST" novalidate class="validated-form">
-            <div class="mb-3">
-                <label class="form-label" for="username">Username</label>
-                <input class="form-control" type="text" name="username" id="username" placeholder="username" required>
-                <div class="valid-feedback">
-                    Looks good!
+<div class="container d-flex justify-content align-items-center mt-5">
+    <div class="row">
+        <div class="col-xl-4 offset-xl-6 col-md-6 offset-md-3">
+            <div class="card shadow">
+                <img src="https://365cincinnati.com/wp-content/uploads/2020/05/Camping-at-the-camground-900x525.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Register</h1>
+                        <form action="/register" method="POST" novalidate class="validated-form">
+                            <div class="mb-3">
+                                <label class="form-label" for="username">Username</label>
+                                <input class="form-control" type="text" name="username" id="username" placeholder="username" required>
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="password">Password</label>
+                                <input class="form-control" type="password" name="password" id="password" required placeholder="*******">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="email">email</label>
+                                <input class="form-control" type="email" name="email" id="email" required placeholder="user@domain.com">
+                            </div>
+                            <div class="d-grid gap-2">
+                                <button class="btn btn-success">Register!</button>
+                            </div>
+                        </form>
                 </div>
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="password">Password</label>
-                <input class="form-control" type="password" name="password" id="password" required placeholder="*******">
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="email">email</label>
-                <input class="form-control" type="email" name="email" id="email" required placeholder="user@domain.com">
-            </div>
-            <button class="btn btn-success mb-3">Register!</button>
-        </form>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6 offset-3">
+
     </div>
 </div>
